Member paneli yorum işlemleri yapıldı

--- a/TraversalProject/TraversalProject.csproj
+++ b/TraversalProject/TraversalProject.csproj
@@ -6,9 +6,13 @@
 
   <ItemGroup>
     <Compile Remove="Areas\Admin\Data\**" />
+    <Compile Remove="Areas\Member\Data\**" />
     <Content Remove="Areas\Admin\Data\**" />
+    <Content Remove="Areas\Member\Data\**" />
     <EmbeddedResource Remove="Areas\Admin\Data\**" />
+    <EmbeddedResource Remove="Areas\Member\Data\**" />
     <None Remove="Areas\Admin\Data\**" />
+    <None Remove="Areas\Member\Data\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,7 +47,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Member\Data\" />
     <Folder Include="ViewComponents\Destination\" />
     <Folder Include="wwwroot\pdfreports\" />
     <Folder Include="wwwroot\UserImages\" />
